cmake_minimum_required(VERSION 2.8)
project(Robot_Calibration)
find_package(OpenCV REQUIRED)
find_package(Boost 1.72 REQUIRED COMPONENTS date_time)

add_executable( relative src/relative.cpp)
target_link_libraries( relative chilitags_static )
target_link_libraries( relative ${OpenCV_LIBS} )
target_link_libraries( relative pthread )
target_link_libraries( relative ${Boost_DATE_TIME_LIBRARY})
target_include_directories( relative PRIVATE /usr/local/include/chilitags/)
target_include_directories( relative PUBLIC ${Boost_INCLUDE_DIR})
